--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="navbar-top">
       <div class="container">
-        <div>
+        <div style="font-size:14px;">
           <i class="fas fa-phone" style="margin-right:2px;"></i>
           <span style="margin-right:30px;">+255 737 235137</span>
           <i class="fas fa-envelope" style="margin-right:2px;"></i>
@@ -57,20 +57,56 @@
       </div>
     </div>
 
-    <div class="container" style="height:600px;padding:50px 0;">
-      <h1>A title</h1>
+    <div class="container" style="width:800px;padding-top:80px;">
+      <h1 style="text-align:center;margin-bottom:30px;">Our vision</h1>
+      <p>To become a home of hope, inspirations and solutions to teen mothers, girl child and women in Tanzania mainland.</p>
     </div>
 
-    <!-- <div class="container" style="padding:50px 0;">
-      <h1 style="text-align:center;">Our partners</h1>
-      <div class="grid-3">
-        <div><img src="images/msichana-logo.png" style="height:100px;"></div>
-        <div><a href="http://www.childrightsforum.org/" target="_blank"><img src="images/tcrf-logo.jpg" style="height:100px;"></a></div>
-        <div><img src="images/ya-serikali-logo.png" style="height:100px;"></div>
-      </div>
-    </div> -->
+    <div class="container" style="width:800px;padding-top:50px;">
+      <h1 style="text-align:center;margin-bottom:30px;">Our mission</h1>
+      <p>To provide a second chance to young (teen mothers) who are school dropout to return to school after birth to finish their education cycle which was vandalized by teen pregnancy, find and raise their talents and skills as well as to support through empowerment programs which can help them to have source of income generating. To provide counseling and awareness education on teen pregnancies, sexual diseases including HIV/AIDS as well as leadership skills for creating confidence and feeling of belonging to re-building their childhood lost dreams of their future.</p>
+    </div>
 
-    <div style="background-color:#f4f7f4;padding:60px 0 80px;">
+    <div style="padding-top:50px;">
+      <h1 style="text-align:center;margin-bottom:20px;">Our partners</h1>
+      <div class="container" style="width:800px;">
+        <div class="grid-4">
+          <div class="partner">
+            <img src="images/partners/msichana-logo-bw-square.png">
+          </div>
+          <div class="partner">
+            <img src="images/partners/huheso-logo-bw-square.png">
+          </div>
+          <div class="partner">
+            <img src="images/partners/tcrf-logo-bw-square.png">  
+          </div>
+          <div class="partner">
+            <img src="images/partners/yali-logo-bw-square.png">
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="container" style="width:800px;">
+        <div class="grid-4">
+          <div class="partner">
+            <img src="images/partners/ya-serikali-logo-bw-square.png">
+          </div>
+          <div class="partner">
+            <img src="images/partners/morogoro-municipal-logo-bw-square.png">
+          </div>
+          <div href="https://www.equalitynow.org/" target="_blank" class="partner">
+            <img src="images/partners/equality-now-logo-bw-square.png">
+          </div>
+          <div class="partner">
+            <img src="images/partners/siha-logo-bw-square.png">
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div style="background-color:#f4f7f4;padding:60px 0 80px;margin-top:60px;">
       <div class="container">
         <h2 style="text-align:center;margin-bottom:30px;grid-column:1/13">Contact us</h2>
         <form 
@@ -134,7 +170,7 @@
 
     <div class="footer footer-bottom">
       <div class="container footer-container">
-        <div>Copyright © 2020. Young Strong Mothers Foundation. All rights reserved.</div>
+        <div style="font-size:14px;">Copyright © 2020. Young Strong Mothers Foundation. All rights reserved.</div>
         <div>
           <a href="https://www.facebook.com/www.ysmf.org" target="_blank" style="margin-right:30px;"><i class="fab fa-facebook-f"></i></a>
           <a href="https://twitter.com/info_ysmf" target="_blank"><i class="fab fa-twitter"></i></a>
