--- a/partners.html
+++ b/partners.html
@@ -14,7 +14,22 @@
   </head>
   <body>
 
-    <div class="navbar">
+    <div class="navbar-top">
+      <div class="container">
+        <div style="font-size:14px;">
+          <i class="fas fa-phone" style="margin-right:2px;"></i>
+          <span style="margin-right:30px;">+255 737 235137</span>
+          <i class="fas fa-envelope" style="margin-right:2px;"></i>
+          <a href="mailto:info@ysmf.org">info@ysmf.org</a>
+        </div>
+        <div>
+          <a href="https://www.facebook.com/www.ysmf.org" target="_blank" style="margin-right:30px;"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://twitter.com/info_ysmf" target="_blank"><i class="fab fa-twitter"></i></a>
+        </div>
+      </div>
+    </div>
+
+    <div class="navbar navbar-small">
       <div class="container">
         <div>
           <a href="index.html" id="logo"><img src="images/logo-grande-white.svg" height="60" style="margin-top:30px;"></a>
@@ -40,53 +55,40 @@
       </div>
     </div>
 
-    <div style="padding:50px 0 0;">
-      <div class="container">
-        <div class="grid-3">
-          <div class="partner-container">
-            <div class="partner">
-              <div class="partner-logo-container">
-                <img src="images/msichana-logo.png" style="height:100px;">
-              </div>
-              <div class="partner-name">Msichana Initiative</div>
-              <div><button class="btn">Visit their website</button></div>
-            </div>
-          </div>
-          <div class="partner-container">
-            <div class="partner">
-            </div>
-          </div>
-          <div class="partner-container">
-            <div class="partner">
-            </div>
-          </div>
-          <!-- <div><img src="images/msichana-logo.png" style="height:100px;"></div>
-          <div><a href="http://www.childrightsforum.org/" target="_blank"><img src="images/tcrf-logo.jpg" style="height:100px;"></a></div>
-          <div><img src="images/ya-serikali-logo.png" style="height:100px;"></div>
-          <div><a href="http://huheso.or.tz/"><img src="images/huheso-logo.jpg" style="height:100px;"></a></div> -->
+    <div style="padding-top:80px;">
+      <div class="container" style="width:800px;">
+        <div class="grid-4">
+          <a href="https://msichana.or.tz/" target="_blank" class="partner">
+            <img src="images/partners/msichana-logo-square.png">
+          </a>
+          <a href="http://huheso.or.tz/" target="_blank" class="partner">
+            <img src="images/partners/huheso-logo-square.png">
+          </a>
+          <a href="http://www.childrightsforum.org/" target="_blank" class="partner">
+            <img src="images/partners/tcrf-logo-square.png">  
+          </a>
+          <a href="https://yali.state.gov/" target="_blank" class="partner">
+            <img src="images/partners/yali-logo-square.png">
+          </a>
         </div>
       </div>
     </div>
 
-    <div style="padding:50px 0;">
-      <div class="container">
-        <div class="grid-3">
-          <div class="partner-container">
-            <div class="partner">
-            </div>
+    <div style="padding:60px 0 80px;">
+      <div class="container" style="width:800px;">
+        <div class="grid-4">
+          <div class="partner">
+            <img src="images/partners/ya-serikali-logo-square.png">
           </div>
-          <div class="partner-container">
-            <div class="partner">
-            </div>
+          <div class="partner">
+            <img src="images/partners/morogoro-municipal-logo-square.png">
           </div>
-          <div class="partner-container">
-            <div class="partner">
-            </div>
+          <a href="https://www.equalitynow.org/" target="_blank" class="partner">
+            <img src="images/partners/equality-now-logo-square.png">
+          </a>
+          <div class="partner">
+            <img src="images/partners/siha-logo-square.png">
           </div>
-          <!-- <div><img src="images/msichana-logo.png" style="height:100px;"></div>
-          <div><a href="http://www.childrightsforum.org/" target="_blank"><img src="images/tcrf-logo.jpg" style="height:100px;"></a></div>
-          <div><img src="images/ya-serikali-logo.png" style="height:100px;"></div>
-          <div><a href="http://huheso.or.tz/"><img src="images/huheso-logo.jpg" style="height:100px;"></a></div> -->
         </div>
       </div>
     </div>
@@ -112,7 +114,7 @@
 
     <div class="footer footer-bottom">
       <div class="container footer-container">
-        <div>Copyright © 2020. Young Strong Mothers Foundation. All rights reserved.</div>
+        <div style="font-size:14px;">Copyright © 2020. Young Strong Mothers Foundation. All rights reserved.</div>
         <div>
           <a href="https://www.facebook.com/www.ysmf.org" target="_blank" style="margin-right:30px;"><i class="fab fa-facebook-f"></i></a>
           <a href="https://twitter.com/info_ysmf" target="_blank"><i class="fab fa-twitter"></i></a>
