--- a/founders-message.html
+++ b/founders-message.html
@@ -14,6 +14,21 @@
   </head>
   <body>
 
+    <div class="navbar-top">
+      <div class="container">
+        <div style="font-size:14px;">
+          <i class="fas fa-phone" style="margin-right:2px;"></i>
+          <span style="margin-right:30px;">+255 737 235137</span>
+          <i class="fas fa-envelope" style="margin-right:2px;"></i>
+          <a href="mailto:info@ysmf.org">info@ysmf.org</a>
+        </div>
+        <div>
+          <a href="https://www.facebook.com/www.ysmf.org" target="_blank" style="margin-right:30px;"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://twitter.com/info_ysmf" target="_blank"><i class="fab fa-twitter"></i></a>
+        </div>
+      </div>
+    </div>
+
     <div class="navbar">
       <div class="container">
         <div>
