working on index

--- a/partners.html
+++ b/partners.html
@@ -74,7 +74,7 @@
       </div>
     </div>
 
-    <div style="padding:60px 0 80px;">
+    <div style="padding-bottom:80px;">
       <div class="container" style="width:800px;">
         <div class="grid-4">
           <div class="partner">
@@ -93,7 +93,7 @@
       </div>
     </div>
 
-    <div class="footer">
+    <div class="footer" style="background-color:#f4f7f4;">
       <div class="container footer-container grid-12">
         <div>
           <div class="footer-heading">Who we are</div>
@@ -108,11 +108,11 @@
         <div>
           <div class="footer-heading">Contact</div>
         </div>
-        <div><img src="images/logo-grande-white.svg" style="width:100%;"></div>
+        <div><img src="images/logo-grande-gray.svg" style="width:100%;"></div>
       </div>
     </div>
 
-    <div class="footer footer-bottom">
+    <div class="footer footer-bottom" style="background-color:#eee;">
       <div class="container footer-container">
         <div style="font-size:14px;">Copyright © 2020. Young Strong Mothers Foundation. All rights reserved.</div>
         <div>
