--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <script defer src="https://use.fontawesome.com/releases/v5.11.2/js/all.js" integrity="sha384-b3ua1l97aVGAPEIe48b4TC60WUQbQaGi2jqAWM90y0OZXZeyaTCWtBTKtjW2GXG1" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
     <link href="./css/main.css" rel="stylesheet">
-    <link media="screen and (max-width: 991px)" href="./css/mobile.css" rel="stylesheet">
-    <link media="screen and (min-width: 992px)" href="./css/desktop.css" rel="stylesheet">
+    <link media="screen and (max-width: 1023px)" href="./css/mobile.css" rel="stylesheet">
+    <link media="screen and (min-width: 1024px)" href="./css/desktop.css" rel="stylesheet">
   </head>
   <body id="home">
 
@@ -29,16 +29,29 @@
 
     <div class="navbar">
       <div class="container">
-        <div>
-          <a href="index.html" id="logo"><img src="images/logo-grande-white.svg" height="60" style="margin-top:30px;"></a>
+
+        <a href="index.html" id="logo" class="navbar-brand">
+          <img src="images/logo-grande-white.svg" height="60">
+        </a>
+
+        <div class="navbar-nav-scroll nav-mobile">
+          <div class="navbar-nav bd-navbar-nav flex-row">
+            <a class="nav-item nav-link" href="index.html">Who we are</a>
+            <a class="nav-item nav-link" href="terapia-individual.html">What we do</a>
+            <a class="nav-item nav-link" href="nuestro-equipo.html">Programmes</a>
+            <a class="nav-item nav-link" href="contacto.html">Volunteering</a>
+            <a class="nav-item nav-link" href="nuestro-equipo.html">News</a>
+            <a class="nav-item nav-link" href="contacto.html">Contact</a>
+          </div>
         </div>
-        <div>
+
+        <div class="nav-desktop">
           <ul>
             <li><a href="terapia-individual.html">Who we are</a></li>
             <li><a href="nuestro-equipo.html">What we do</a></li>
             <li><a href="nuestro-equipo.html">Programmes</a></li>
             <li><a href="nuestro-equipo.html">Volunteering</a></li>
-            <li><a href="nuestro-equipo.html">News and Resourcces</a></li>
+            <li><a href="nuestro-equipo.html">News</a></li>
             <li><a href="contacto.html">Contact</a></li>
           </ul>
         </div>
@@ -48,7 +61,7 @@
     <div class="hero">
       <div class="container grid-12">
         <div class="hero-heading">
-          <h2 style=font-size:30px;>
+          <h2>
             <div style="margin-left:30px;"><span><span>The home</span></span></div>
             <div><span><span>of hope and</span></span></div>
             <div style="margin-left:-30px;"><span><span>inspiration</span></span></div>
@@ -57,56 +70,56 @@
       </div>
     </div>
 
-    <div class="container" style="width:800px;padding-top:80px;">
+    <div id="hero-mobile">
+      The home of hope and inspiration
+    </div>
+
+    <div id="vision" class="container">
       <h1 style="text-align:center;margin-bottom:30px;">Our vision</h1>
       <p>To become a home of hope, inspirations and solutions to teen mothers, girl child and women in Tanzania mainland.</p>
     </div>
 
-    <div class="container" style="width:800px;padding-top:50px;">
+    <div id="mission" class="container">
       <h1 style="text-align:center;margin-bottom:30px;">Our mission</h1>
       <p>To provide a second chance to young (teen mothers) who are school dropout to return to school after birth to finish their education cycle which was vandalized by teen pregnancy, find and raise their talents and skills as well as to support through empowerment programs which can help them to have source of income generating. To provide counseling and awareness education on teen pregnancies, sexual diseases including HIV/AIDS as well as leadership skills for creating confidence and feeling of belonging to re-building their childhood lost dreams of their future.</p>
     </div>
 
-    <div style="padding-top:50px;">
-      <h1 style="text-align:center;margin-bottom:20px;">Our partners</h1>
-      <div class="container" style="width:800px;">
-        <div class="grid-4">
-          <div class="partner">
-            <img src="images/partners/msichana-logo-bw-square.png">
-          </div>
-          <div class="partner">
-            <img src="images/partners/huheso-logo-bw-square.png">
-          </div>
-          <div class="partner">
-            <img src="images/partners/tcrf-logo-bw-square.png">  
-          </div>
-          <div class="partner">
-            <img src="images/partners/yali-logo-bw-square.png">
-          </div>
+    <h1 style="text-align:center;margin-bottom:30px;padding-top:80px;">Our partners</h1>
+    <div class="container container-narrow">
+      <div class="grid-4">
+        <div class="partner">
+          <img src="images/partners/msichana-logo-bw-square.png">
+        </div>
+        <div class="partner">
+          <img src="images/partners/huheso-logo-bw-square.png">
+        </div>
+        <div class="partner">
+          <img src="images/partners/tcrf-logo-bw-square.png">  
+        </div>
+        <div class="partner">
+          <img src="images/partners/yali-logo-bw-square.png">
         </div>
       </div>
     </div>
 
-    <div>
-      <div class="container" style="width:800px;">
-        <div class="grid-4">
-          <div class="partner">
-            <img src="images/partners/ya-serikali-logo-bw-square.png">
-          </div>
-          <div class="partner">
-            <img src="images/partners/morogoro-municipal-logo-bw-square.png">
-          </div>
-          <div href="https://www.equalitynow.org/" target="_blank" class="partner">
-            <img src="images/partners/equality-now-logo-bw-square.png">
-          </div>
-          <div class="partner">
-            <img src="images/partners/siha-logo-bw-square.png">
-          </div>
+    <div class="container container-narrow">
+      <div class="grid-4">
+        <div class="partner">
+          <img src="images/partners/ya-serikali-logo-bw-square.png">
+        </div>
+        <div class="partner">
+          <img src="images/partners/morogoro-municipal-logo-bw-square.png">
+        </div>
+        <div href="https://www.equalitynow.org/" target="_blank" class="partner">
+          <img src="images/partners/equality-now-logo-bw-square.png">
+        </div>
+        <div class="partner">
+          <img src="images/partners/siha-logo-bw-square.png">
         </div>
       </div>
     </div>
 
-    <div style="background-color:#f4f7f4;padding:60px 0 80px;margin-top:60px;">
+    <div style="background-color:#f5f5f5;padding:60px 20px 80px;margin-top:60px;">
       <div class="container">
         <h2 style="text-align:center;margin-bottom:30px;grid-column:1/13">Contact us</h2>
         <form 
@@ -164,7 +177,7 @@
         <div>
           <div class="footer-heading">Contact</div>
         </div>
-        <div><img src="images/logo-grande-white.svg" style="width:100%;"></div>
+        <div><img src="images/logo-grande-gray.svg" style="width:100%;"></div>
       </div>
     </div>
 
