--- a/founders-message.html
+++ b/founders-message.html
@@ -31,17 +31,30 @@
 
     <div class="navbar">
       <div class="container">
-        <div>
-          <a href="index.html" id="logo"><img src="images/logo-grande-white.svg" height="60" style="margin-top:30px;"></a>
+
+        <a href="index.html" id="logo" class="navbar-brand">
+          <img src="images/logo-grande-white.svg" height="60">
+        </a>
+
+        <div class="navbar-nav-scroll nav-mobile">
+          <div class="navbar-nav bd-navbar-nav flex-row">
+            <a class="nav-item nav-link" href="#">Who we are</a>
+            <a class="nav-item nav-link" href="#">What we do</a>
+            <a class="nav-item nav-link" href="#">Programmes</a>
+            <a class="nav-item nav-link" href="#">Volunteering</a>
+            <a class="nav-item nav-link" href="#">News</a>
+            <a class="nav-item nav-link" href="#">Contact</a>
+          </div>
         </div>
-        <div>
+
+        <div class="nav-desktop">
           <ul>
-            <li><a href="terapia-individual.html">Who we are</a></li>
-            <li><a href="nuestro-equipo.html">What we do</a></li>
-            <li><a href="nuestro-equipo.html">Programmes</a></li>
-            <li><a href="nuestro-equipo.html">Volunteering</a></li>
-            <li><a href="nuestro-equipo.html">News and Resourcces</a></li>
-            <li><a href="contacto.html">Contact</a></li>
+            <li><a href="#">Who we are</a></li>
+            <li><a href="#">What we do</a></li>
+            <li><a href="#">Programmes</a></li>
+            <li><a href="#">Volunteering</a></li>
+            <li><a href="#">News</a></li>
+            <li><a href="#">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -50,43 +63,20 @@
     <div class="header secondary-bg">
       <div class="container">
         <div class="col-8">
-          <h1>Founders Message</h1>
+          <h1>Founders message</h1>
         </div>
       </div>
     </div>
 
     <div style="padding:50px 0;">
-      <div class="container">
-
-        <p class="col-8" style="margin-bottom:40px;">
-          As the World is implementing the Millennium Developments Goals which focus on human well-being; (the first six i.e. Poverty and Hunger Eradication, Achieving Universal Education and Gender Equality, Reduce child mortality, Improve maternal health, Combat HIV/AIDS, Malaria and other diseases), Young Strong Mothers Foundation (YSMF) is working round the clock to ensure that the fundamentals needs of Tanzaniaâ€™s vulnerable and disadvantaged young mothers and their children are being addressed.
-        </p>
-
-        <h2 class="col-8" style="margin-bottom:20px;">Our values</h2>
-
-        <h3 class="col-8" style="margin-bottom:20px;">Our Mission</h3>
-
-        <p class="col-8" style="margin-bottom:20px;">
-          To create an environment to address matters facing vulnerable girls, young mothers and their children pertaining to thei...
-        </p>
-
-        <h3 class="col-8" style="margin-bottom:20px;">Our Vision</h3>
-
-        <p class="col-8" style="margin-bottom:20px;">
-          To become a warm home of hope, inspiration and provider of solutions to vulnerable girls, young mothers and their childr...
-        </p>
-
-        <h3 class="col-8" style="margin-bottom:20px;">About us</h3>
-
-        <p class="col-8" style="margin-bottom:20px;">
-          Young Strong Mothers Foundation (YSMF) was registered as a Non Governmental, non-profit and non partisan organization, which was officially registered on 09th February 2015 under registration certificate number 00NGO/00007768, issued by the Ministry of Community Development, Gender and Children. YSMF operates in Tanzania mainland with the main office located in Morogoro Municipalityâ€™. So far the organization has registered 576 vulnerable teenage mothers from Morogoro Municipal wards alone where most projects and activities are implemented. It is an organization that comprises of six individual founder members under the tutelage of Ms. Jackie Leonard Bomboma.
-        </p>
-
+      <div id="message" class="container" style="width:800px;">
+        <div><img src="images/jackie-avatar.jpg" style="width:100%;border-radius:99px;"></div>
+        <p>As the World is implementing the Millennium Developments Goals which focus on human well-being; (the first six i.e. Poverty and Hunger Eradication, Achieving Universal Education and Gender Equality, Reduce child mortality, Improve maternal health, Combat HIV/AIDS, Malaria and other diseases), Young Strong Mothers Foundation (YSMF) is working round the clock to ensure that the fundamentals needs of Tanzania's vulnerable and disadvantaged young mothers and their children are being addressed.</p>
       </div>
     </div>
 
-    <div class="footer">
-      <div class="container footer-container grid-12">
+    <div class="footer" style="background-color:#f5f5f5;">
+      <div class="container footer-container">
         <div>
           <div class="footer-heading">Who we are</div>
           <div><a href="founders-message.html">Founders message</a></div>
@@ -100,13 +90,13 @@
         <div>
           <div class="footer-heading">Contact</div>
         </div>
-        <div><img src="images/logo-grande-white.svg" style="width:100%;"></div>
+        <div><img src="images/logo-grande-gray.svg"></div>
       </div>
     </div>
 
-    <div class="footer footer-bottom">
+    <div class="footer footer-bottom" style="background-color:#fff;">
       <div class="container footer-container">
-        <div>Copyright © 2020. Young Strong Mothers Foundation. All rights reserved.</div>
+        <div id="copyright">Copyright © 2020. Young Strong Mothers Foundation. All rights reserved.</div>
         <div>
           <a href="https://www.facebook.com/www.ysmf.org" target="_blank" style="margin-right:30px;"><i class="fab fa-facebook-f"></i></a>
           <a href="https://twitter.com/info_ysmf" target="_blank"><i class="fab fa-twitter"></i></a>
