--- a/index.html
+++ b/index.html
@@ -36,23 +36,23 @@
 
         <div class="navbar-nav-scroll nav-mobile">
           <div class="navbar-nav bd-navbar-nav flex-row">
-            <a class="nav-item nav-link" href="index.html">Who we are</a>
-            <a class="nav-item nav-link" href="terapia-individual.html">What we do</a>
-            <a class="nav-item nav-link" href="nuestro-equipo.html">Programmes</a>
-            <a class="nav-item nav-link" href="contacto.html">Volunteering</a>
-            <a class="nav-item nav-link" href="nuestro-equipo.html">News</a>
-            <a class="nav-item nav-link" href="contacto.html">Contact</a>
+            <a class="nav-item nav-link" href="#">Who we are</a>
+            <a class="nav-item nav-link" href="#">What we do</a>
+            <a class="nav-item nav-link" href="#">Programmes</a>
+            <a class="nav-item nav-link" href="#">Volunteering</a>
+            <a class="nav-item nav-link" href="#">News</a>
+            <a class="nav-item nav-link" href="#">Contact</a>
           </div>
         </div>
 
         <div class="nav-desktop">
           <ul>
-            <li><a href="terapia-individual.html">Who we are</a></li>
-            <li><a href="nuestro-equipo.html">What we do</a></li>
-            <li><a href="nuestro-equipo.html">Programmes</a></li>
-            <li><a href="nuestro-equipo.html">Volunteering</a></li>
-            <li><a href="nuestro-equipo.html">News</a></li>
-            <li><a href="contacto.html">Contact</a></li>
+            <li><a href="#">Who we are</a></li>
+            <li><a href="#">What we do</a></li>
+            <li><a href="#">Programmes</a></li>
+            <li><a href="#">Volunteering</a></li>
+            <li><a href="#">News</a></li>
+            <li><a href="#">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -74,19 +74,26 @@
       The home of hope and inspiration
     </div>
 
-    <div id="vision" class="container">
-      <h1 style="text-align:center;margin-bottom:30px;">Our vision</h1>
-      <p>To become a home of hope, inspirations and solutions to teen mothers, girl child and women in Tanzania mainland.</p>
+    <div id="about" class="container">
+      <h1 style="text-align:center;margin-bottom:30px;">About us</h1>
+      <p>Young Strong Mothers Foundation (YSMF) was registered as a Non Governmental, non-profit and non partisan organization, which was officially registered on 09th February 2015 under registration certificate number 00NGO/00007768, issued by the Ministry of Community Development, Gender and Children. YSMF operates in Tanzania mainland with the main office located in Morogoro Municipality. So far the organization has registered 576 vulnerable teenage mothers from Morogoro Municipal wards alone where most projects and activities are implemented. It is an organization that comprises of six individual founder members under the tutelage of Ms. Jackie Leonard Bomboma.</p>
     </div>
 
-    <div id="mission" class="container">
-      <h1 style="text-align:center;margin-bottom:30px;">Our mission</h1>
-      <p>To provide a second chance to young (teen mothers) who are school dropout to return to school after birth to finish their education cycle which was vandalized by teen pregnancy, find and raise their talents and skills as well as to support through empowerment programs which can help them to have source of income generating. To provide counseling and awareness education on teen pregnancies, sexual diseases including HIV/AIDS as well as leadership skills for creating confidence and feeling of belonging to re-building their childhood lost dreams of their future.</p>
+    <div class="vision-container">
+      <div id="vision" class="container">
+        <h1 style="text-align:center;margin-bottom:30px;">Our vision</h1>
+        <p>To become a home of hope, inspirations and solutions to teen mothers, girl child and women in Tanzania mainland.</p>
+      </div>
+
+      <div id="mission" class="container">
+        <h1 style="text-align:center;margin-bottom:30px;">Our mission</h1>
+        <p>To provide a second chance to young (teen mothers) who are school dropout to return to school after birth to finish their education cycle which was vandalized by teen pregnancy, find and raise their talents and skills as well as to support through empowerment programs which can help them to have source of income generating. To provide counseling and awareness education on teen pregnancies, sexual diseases including HIV/AIDS as well as leadership skills for creating confidence and feeling of belonging to re-building their childhood lost dreams of their future.</p>
+      </div>
     </div>
 
-    <h1 style="text-align:center;margin-bottom:30px;padding-top:80px;">Our partners</h1>
-    <div class="container container-narrow">
-      <div class="grid-4">
+    <div id="partners-container" class="container container-narrow">
+      <h1>Our partners</h1>
+      <div class="partners">
         <div class="partner">
           <img src="images/partners/msichana-logo-bw-square.png">
         </div>
@@ -103,14 +110,14 @@
     </div>
 
     <div class="container container-narrow">
-      <div class="grid-4">
+      <div class="partners">
         <div class="partner">
           <img src="images/partners/ya-serikali-logo-bw-square.png">
         </div>
         <div class="partner">
           <img src="images/partners/morogoro-municipal-logo-bw-square.png">
         </div>
-        <div href="https://www.equalitynow.org/" target="_blank" class="partner">
+        <div class="partner">
           <img src="images/partners/equality-now-logo-bw-square.png">
         </div>
         <div class="partner">
@@ -162,11 +169,10 @@
     </div>
 
     <div class="footer">
-      <div class="container footer-container grid-12">
+      <div class="container footer-container">
         <div>
           <div class="footer-heading">Who we are</div>
           <div><a href="founders-message.html">Founders message</a></div>
-          <div><a href="partners.html">Our partners</a></div>
         </div>
         <div>
           <div class="footer-heading">What we do</div>
@@ -177,13 +183,13 @@
         <div>
           <div class="footer-heading">Contact</div>
         </div>
-        <div><img src="images/logo-grande-gray.svg" style="width:100%;"></div>
+        <div><img src="images/logo-grande-gray.svg"></div>
       </div>
     </div>
 
     <div class="footer footer-bottom">
       <div class="container footer-container">
-        <div style="font-size:14px;">Copyright © 2020. Young Strong Mothers Foundation. All rights reserved.</div>
+        <div id="copyright">Copyright © 2020. Young Strong Mothers Foundation. All rights reserved.</div>
         <div>
           <a href="https://www.facebook.com/www.ysmf.org" target="_blank" style="margin-right:30px;"><i class="fab fa-facebook-f"></i></a>
           <a href="https://twitter.com/info_ysmf" target="_blank"><i class="fab fa-twitter"></i></a>
