finish up index' git status

--- a/founders-message.html
+++ b/founders-message.html
@@ -12,7 +12,7 @@
     <link media="screen and (max-width: 991px)" href="./css/mobile.css" rel="stylesheet">
     <link media="screen and (min-width: 992px)" href="./css/desktop.css" rel="stylesheet">
   </head>
-  <body>
+  <body id="founders-message">
 
     <div class="navbar-top">
       <div class="container">
@@ -60,17 +60,15 @@
       </div>
     </div>
 
-    <div class="header secondary-bg">
+    <div id="founders-message-title" class="header secondary-bg">
       <div class="container">
-        <div class="col-8">
-          <h1>Founders message</h1>
-        </div>
+        <h1>Founder's message</h1>
       </div>
     </div>
 
     <div style="padding:50px 0;">
-      <div id="message" class="container" style="width:800px;">
-        <div><img src="images/jackie-avatar.jpg" style="width:100%;border-radius:99px;"></div>
+      <div id="message" class="container">
+        <img src="images/jackie-avatar.jpg" style="width:100%;border-radius:99px;">
         <p>As the World is implementing the Millennium Developments Goals which focus on human well-being; (the first six i.e. Poverty and Hunger Eradication, Achieving Universal Education and Gender Equality, Reduce child mortality, Improve maternal health, Combat HIV/AIDS, Malaria and other diseases), Young Strong Mothers Foundation (YSMF) is working round the clock to ensure that the fundamentals needs of Tanzania's vulnerable and disadvantaged young mothers and their children are being addressed.</p>
       </div>
     </div>
@@ -79,7 +77,7 @@
       <div class="container footer-container">
         <div>
           <div class="footer-heading">Who we are</div>
-          <div><a href="founders-message.html">Founders message</a></div>
+          <div><a href="founders-message.html">Founder's message</a></div>
         </div>
         <div>
           <div class="footer-heading">What we do</div>
