--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@
         <h1 style="text-align:center;margin-bottom:30px;">Our vision</h1>
         <p>To become a home of hope, inspirations and solutions to teen mothers, girl child and women in Tanzania mainland.</p>
       </div>
-
-      <div id="mission" class="container">
-        <h1 style="text-align:center;margin-bottom:30px;">Our mission</h1>
-        <p>To provide a second chance to young (teen mothers) who are school dropout to return to school after birth to finish their education cycle which was vandalized by teen pregnancy, find and raise their talents and skills as well as to support through empowerment programs which can help them to have source of income generating. To provide counseling and awareness education on teen pregnancies, sexual diseases including HIV/AIDS as well as leadership skills for creating confidence and feeling of belonging to re-building their childhood lost dreams of their future.</p>
-      </div>
     </div>
 
-    <div id="partners-container" class="container container-narrow">
+    <div id="mission" class="container">
+      <h1 style="text-align:center;margin-bottom:30px;">Our mission</h1>
+      <p>To provide a second chance to young (teen mothers) who are school dropout to return to school after birth to finish their education cycle which was vandalized by teen pregnancy, find and raise their talents and skills as well as to support through empowerment programs which can help them to have source of income generating. To provide counseling and awareness education on teen pregnancies, sexual diseases including HIV/AIDS as well as leadership skills for creating confidence and feeling of belonging to re-building their childhood lost dreams of their future.</p>
+    </div>
+
+   <!--  <div id="partners-container" class="container container-narrow">
       <h1>Our partners</h1>
       <div class="partners">
         <div class="partner">
@@ -124,9 +124,9 @@
           <img src="images/partners/siha-logo-bw-square.png">
         </div>
       </div>
-    </div>
+    </div> -->
 
-    <div style="background-color:#f5f5f5;padding:60px 20px 80px;margin-top:60px;">
+    <div style="background-color:#f5f5f5;padding:50px;">
       <div class="container">
         <h2 style="text-align:center;margin-bottom:30px;grid-column:1/13">Contact us</h2>
         <form 
@@ -172,7 +172,7 @@
       <div class="container footer-container">
         <div>
           <div class="footer-heading">Who we are</div>
-          <div><a href="founders-message.html">Founders message</a></div>
+          <div><a href="founders-message.html">Founder's message</a></div>
         </div>
         <div>
           <div class="footer-heading">What we do</div>
