--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
       <div class="container">
         <div style="font-size:14px;">
           <i class="fas fa-phone" style="margin-right:2px;"></i>
-          <span style="margin-right:30px;">+255 737 235137</span>
-          <i class="fas fa-envelope" style="margin-right:2px;"></i>
-          <a href="mailto:info@ysmf.org">info@ysmf.org</a>
+          <!-- <span style="margin-right:30px;"></span> -->
+          <a style="margin-right:30px;" href="tel:+255 737 235137">+255 737 235137</a>
+          <div id="navbar-top-email">
+            <i class="fas fa-envelope" style="margin-right:2px;"></i>
+            <a href="mailto:info@ysmf.org">info@ysmf.org</a>
+          </div>
         </div>
         <div>
           <a href="https://www.facebook.com/www.ysmf.org" target="_blank" style="margin-right:30px;"><i class="fab fa-facebook-f"></i></a>
@@ -126,7 +129,7 @@
       </div>
     </div> -->
 
-    <div style="background-color:#f5f5f5;padding:50px;">
+    <div id="contact">
       <div class="container">
         <h2 style="text-align:center;margin-bottom:30px;grid-column:1/13">Contact us</h2>
         <form 
