--- a/index.html
+++ b/index.html
@@ -176,6 +176,8 @@
         <div>
           <div class="footer-heading">Who we are</div>
           <div><a href="founders-message.html">Founder's message</a></div>
+          <div><a href="our-history.html">Our history</a></div>
+          <div><a href="problem-statement.html">Problem statement</a></div>
         </div>
         <div>
           <div class="footer-heading">What we do</div>
