--- a/our-history.html
+++ b/our-history.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <title>Founders Message - YSMF</title>
+    <title>Our History - YSMF</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -62,19 +62,24 @@
 
     <div id="founders-message-title" class="header secondary-bg">
       <div class="container">
-        <h1>Founder's message</h1>
+        <h1>Our history</h1>
       </div>
     </div>
 
-    <div style="padding:50px 0;">
-      <div id="message" class="container">
-        <img src="images/jackie-avatar.jpg" style="width:100%;border-radius:99px;">
-        <div style="position:relative;">
-          <div class="message-arrow"></div>
-          <div style="margin-bottom:10px;font-weight:bold;color:#3c1053;">Ms. Jackie Leonard Bomboma</div>
-          As the World is implementing the Millennium Developments Goals which focus on human well-being; (the first six i.e. Poverty and Hunger Eradication, Achieving Universal Education and Gender Equality, Reduce child mortality, Improve maternal health, Combat HIV/AIDS, Malaria and other diseases), Young Strong Mothers Foundation (YSMF) is working round the clock to ensure that the fundamentals needs of Tanzania's vulnerable and disadvantaged young mothers and their children are being addressed.
-        </div>
-      </div>
+    <div class="container section">
+      <p>Young Strong Mothers Foundation (YSMF) was registered as a Non Governmental, non-profit and non partisan organization, which was officially registered on 09th February 2015 under registration certificate number 00NGO/00007768, issued by the Ministry of Community Development, Gender and Children. YSMF operates in Tanzania mainland with the main office located in Morogoro Municipality.</p>
+
+      <p>So far the organization has registered 576 vulnerable teenage mothers from Morogoro Municipal wards alone where most projects and activities are implemented. It is an organization that comprises of six individual founder members under the tutelage of Ms. Jackie Leonard Bomboma.</p>
+
+      <p>Jackie was born in Tabora in 1986 and lost both parents from traffic accident during her infancy. She was raised by a widowed grandfather in a rural village where she faced challenges both as a child as well as adolescent girl. Lacking sexual and reproductive health, education and support Ms. Jackie became pregnant at age of 15. Through the struggle to find a way of rebuilding her dreams and build the future of her child she didn't sit back even after been kicked out of her small family, rejected by a man responsible and lived without social, economic or government support.</p>
+
+      <p>Without skills or knowledge to help her secure employment or becoming self employed she struggled in a different decent ways to raise her child as well as to generate sufficient income to survive.</p>
+
+      <p>Eventually she managed to get educational support and joined secondary education and obtained a certificate of ordinary secondary certificate in 2010.</p>
+
+      <p>Since then she built a desire to contribute back to the community by standing strong and use her story as a tool and armor to help curb teenage pregnancies to other adolescent girls, to support vulnerable teenage mothers who display signs of despair in their lives, dreams and to parents who react negatively to their children who turned mothers before reaching the age of 18. Jackie remains a lone voice advocating against discrimination of teenage mothers. She is also seeking opportunities for vulnerable teenage mothers through education, economic empowerment and health service. She has always believed that those who are strong and faced challenges have a unique responsibility to help others who fell in similar predicaments.</p>
+
+      <p>Ms. Jackie did not wait to be great to start, she started to be great because she believed that everyone has the ability and is responsible for her or his own happiness, success and failure. She believes: "With or without parents, money, education or inheritance young mothers can still build a respectful life and care for others". Together with other six victims of teenage pregnancy, they joined hands and stood up as the voice, way and bridge for other teenage mothers who gave up, who abandoned their children, who are sexual workers, drug dealers, jobless, hopeless to join the family and stand to be good mothers, wives, family members and good citizen.</p>
     </div>
 
     <div class="footer" style="background-color:#f5f5f5;">
