--- a/problem-statement.html
+++ b/problem-statement.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <title>Founders Message - YSMF</title>
+    <title>Problem Statement - YSMF</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -62,19 +62,20 @@
 
     <div id="founders-message-title" class="header secondary-bg">
       <div class="container">
-        <h1>Founder's message</h1>
+        <h1>Problem statement</h1>
       </div>
     </div>
 
-    <div style="padding:50px 0;">
-      <div id="message" class="container">
-        <img src="images/jackie-avatar.jpg" style="width:100%;border-radius:99px;">
-        <div style="position:relative;">
-          <div class="message-arrow"></div>
-          <div style="margin-bottom:10px;font-weight:bold;color:#3c1053;">Ms. Jackie Leonard Bomboma</div>
-          As the World is implementing the Millennium Developments Goals which focus on human well-being; (the first six i.e. Poverty and Hunger Eradication, Achieving Universal Education and Gender Equality, Reduce child mortality, Improve maternal health, Combat HIV/AIDS, Malaria and other diseases), Young Strong Mothers Foundation (YSMF) is working round the clock to ensure that the fundamentals needs of Tanzania's vulnerable and disadvantaged young mothers and their children are being addressed.
-        </div>
-      </div>
+    <div class="container section">
+      <p>Teenage pregnancies are rampant countrywide. The circumstance is partly being attributed to the socio-economic hardships experienced by the vulnerable groups in Tanzania and marginalized cultural and traditional communities. Through teenage pregnancies, young girls dropped-out from schools which led to enhancement of uneducated and unskilled young women to the population.</p>
+
+      <p>Teenage mothers' discrimination and abandonment is a known fact that unfortunately causes endless chain of poverty from mother to a child as well as families. It also contribute a lot in the spread of HIV/AIDS pandemic as many teenage mothers live without family, economic or social support to help them rebuild their dreams, create a better future for themselves and their children whereby ended up taking sexual work as part of their income generation survival vocation.</p>
+
+      <p>On being found pregnant, most Tanzanian families and men responsible do expel these girls and denied them financial and economic support. After giving birth, these girls and their children lack parental skills, basic needs to care for their children, sometimes they opted to abandoning their children in the gutters, which led to increase of street children who might end up becoming teenage mothers in the future as well.</p>
+
+      <p>The young mothers face negative stigmatization, which has strong impact on their psychological wellbeing, leading to a life of fear, shame, guilty and helplessness. The affected young mothers end up leaving their family home and opting to go alone or staying with groups in the streets whereby they are involved in various kinds of illegal activities, which includes drug abuse, joining illicit groups, prostitution and substance abuse. They find themselves in unfamiliar territory of parenting with no skills to enable them join the competitive job market, being unemployed leave them hopeless and vulnerable.</p>
+
+      <p>To be a young mother is hard, it is like walking in darkness on a rainy stormy day in a new place you have never been before. It is a fact that Tanzania lacks institutions caring for teenage mothers, their children and other vulnerable girls so that they can grow into becoming responsible citizens and avoid crisis of rampant HIV/AIDS spread.</p>
     </div>
 
     <div class="footer" style="background-color:#f5f5f5;">
