--- a/advocacy-and-awareness-creation.html
+++ b/advocacy-and-awareness-creation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <title>Detección - INSTIAC</title>
+    <title>Advocacy and Awareness Creation - INSTIAC</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -14,48 +14,59 @@
   </head>
   <body>
 
-    <nav class="navbar">
+    <div class="navbar-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">
-          <img id="logo" src="images/logo-grande.svg" height="55">
-        </a>
-      </div>
-    </nav>
-
-    <nav class="navbar">
-      <div class="container">
-        <div class="navbar-nav-scroll nav-mobile">
-          <div class="navbar-nav bd-navbar-nav flex-row">
-            <a class="nav-item nav-link" href="index.html">Inicio</a>
-            <a class="nav-item nav-link" href="terapia-individual.html">Servicios</a>
-            <a class="nav-item nav-link" href="nuestro-equipo.html">Nuestro equipo</a>
-            <a class="nav-item nav-link" href="contacto.html">Contacto</a>
-          </div>
+        <div style="font-size:14px;">
+          <i class="fas fa-phone" style="margin-right:2px;"></i>
+          <span style="margin-right:30px;">+255 737 235137</span>
+          <i class="fas fa-envelope" style="margin-right:2px;"></i>
+          <a href="mailto:info@ysmf.org">info@ysmf.org</a>
         </div>
-
-        <div class="nav-desktop">
-          <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="terapia-individual.html">Who we are</a></li>
-            <li class="nav-item"><a class="nav-link" href="nuestro-equipo.html">What we do</a></li>
-            <li class="nav-item"><a class="nav-link" href="nuestro-equipo.html">Programmes</a></li>
-            <li class="nav-item"><a class="nav-link" href="nuestro-equipo.html">Volunteering</a></li>
-            <li class="nav-item"><a class="nav-link" href="nuestro-equipo.html">News and Resourcces</a></li>
-            <li class="nav-item"><a class="nav-link" href="contacto.html">Contact us</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
-    <div class="header secondary-bg">
-      <div class="container">
-        <div class="col-8">
-          <h1>Advocacy & Awareness Creation</h1>
-          <h3>Ending Teenage Pregnancy and Early MarriageÂ </h3>
+        <div>
+          <a href="https://www.facebook.com/www.ysmf.org" target="_blank" style="margin-right:30px;"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://twitter.com/info_ysmf" target="_blank"><i class="fab fa-twitter"></i></a>
         </div>
       </div>
     </div>
 
-    <div style="background-color:#f5f5f5;padding:50px 0;">
+    <div class="navbar">
+      <div class="container">
+
+        <a href="index.html" id="logo" class="navbar-brand">
+          <img src="images/logo-grande-white.svg" height="60">
+        </a>
+
+        <div class="navbar-nav-scroll nav-mobile">
+          <div class="navbar-nav bd-navbar-nav flex-row">
+            <a class="nav-item nav-link" href="#">Who we are</a>
+            <a class="nav-item nav-link" href="#">What we do</a>
+            <a class="nav-item nav-link" href="#">Programmes</a>
+            <a class="nav-item nav-link" href="#">Volunteering</a>
+            <a class="nav-item nav-link" href="#">News</a>
+            <a class="nav-item nav-link" href="#">Contact</a>
+          </div>
+        </div>
+
+        <div class="nav-desktop">
+          <ul>
+            <li><a href="#">Who we are</a></li>
+            <li><a href="#">What we do</a></li>
+            <li><a href="#">Programmes</a></li>
+            <li><a href="#">Volunteering</a></li>
+            <li><a href="#">News</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div id="founders-message-title" class="header secondary-bg">
+      <div class="container">
+        <h1>Advocacy and awareness creation</h1>
+      </div>
+    </div>
+
+    <div class="container section">
       <div class="container" style="font-size:18px;color:#777f85;font-weight:400;">
 
         <h2 class="col-8">Teen pregnancies</h2>
@@ -89,23 +100,33 @@
       </div>
     </div>
 
-    <div class="footer">
-      <div class="container">
-        <div id="footer-logo" class="col-desktop-3 col-mobile-12" style="line-height:80px;">
-          <img src="images/logo-gris.svg" height="40">
+    <div class="footer" style="background-color:#f5f5f5;">
+      <div class="container footer-container">
+        <div>
+          <div class="footer-heading">Who we are</div>
+          <div><a href="founders-message.html">Founder's message</a></div>
+          <div><a href="our-history.html">Our history</a></div>
+          <div><a href="problem-statement.html">Problem statement</a></div>
         </div>
-        <div id="footer-main">
-          <div id="footer-links">
-            <div class="footer-links"><a href="index.html">Inicio</a></div>
-            <div class="footer-links"><a href="terapia-individual.html">Servicios</a></div>
-            <div class="footer-links"><a href="nuestro-equipo.html">Nuestro equipo</a></div>
-            <div class="footer-links"><a href="contacto.html">Contacto</a></div>
-          </div>
-          <div style="text-align:center;line-height:30px;">Copyright © 2019. Associació PSIENTE. Todos los derechos reservados</div>
+        <div>
+          <div class="footer-heading">What we do</div>
         </div>
-        <div id="social-icons">
-          <a href="https://twitter.com/APsiente" target="_blank"><i class="fab fa-twitter"></i></a>
-          <a href="https://www.facebook.com/associacio.psiente" target="_blank"><i class="fab fa-facebook ml-5"></i></a>
+        <div>
+          <div class="footer-heading">Volunteering</div>
+        </div>
+        <div>
+          <div class="footer-heading">Contact</div>
+        </div>
+        <div><img src="images/logo-grande-gray.svg"></div>
+      </div>
+    </div>
+
+    <div class="footer footer-bottom" style="background-color:#eee;">
+      <div class="container footer-container">
+        <div id="copyright">Copyright © 2020. Young Strong Mothers Foundation. All rights reserved.</div>
+        <div>
+          <a href="https://www.facebook.com/www.ysmf.org" target="_blank" style="margin-right:30px;"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://twitter.com/info_ysmf" target="_blank"><i class="fab fa-twitter"></i></a>
         </div>
       </div>
     </div>
