--- a/partners.html
+++ b/partners.html
@@ -29,33 +29,82 @@
       </div>
     </div>
 
-    <div class="navbar navbar-small">
+    <div class="navbar">
       <div class="container">
-        <div>
-          <a href="index.html" id="logo"><img src="images/logo-grande-white.svg" height="60" style="margin-top:30px;"></a>
+
+        <a href="index.html" id="logo" class="navbar-brand">
+          <img src="images/logo-grande-white.svg" height="60">
+        </a>
+
+        <div class="navbar-nav-scroll nav-mobile">
+          <div class="navbar-nav bd-navbar-nav flex-row">
+            <a class="nav-item nav-link" href="#">Who we are</a>
+            <a class="nav-item nav-link" href="#">What we do</a>
+            <a class="nav-item nav-link" href="#">Programmes</a>
+            <a class="nav-item nav-link" href="#">Volunteering</a>
+            <a class="nav-item nav-link" href="#">News</a>
+            <a class="nav-item nav-link" href="#">Contact</a>
+          </div>
         </div>
-        <div>
+
+        <div class="nav-desktop">
           <ul>
-            <li><a href="terapia-individual.html">Who we are</a></li>
-            <li><a href="nuestro-equipo.html">What we do</a></li>
-            <li><a href="nuestro-equipo.html">Programmes</a></li>
-            <li><a href="nuestro-equipo.html">Volunteering</a></li>
-            <li><a href="nuestro-equipo.html">News and Resourcces</a></li>
-            <li><a href="contacto.html">Contact</a></li>
+            <li><a href="#">Who we are</a></li>
+            <li><a href="#">What we do</a></li>
+            <li><a href="#">Programmes</a></li>
+            <li><a href="#">Volunteering</a></li>
+            <li><a href="#">News</a></li>
+            <li><a href="#">Contact</a></li>
           </ul>
         </div>
       </div>
     </div>
 
-    <div class="header secondary-bg">
+    <div id="founders-message-title" class="header secondary-bg">
       <div class="container">
-        <div class="col-8">
-          <h1>Our partners</h1>
-        </div>
+        <h1>Our partners</h1>
       </div>
     </div>
 
-    <div style="padding-top:80px;">
+
+    <div class="container section">
+      <table>
+        <tr>
+          <th class="bandera">Partner</th>
+          <th>Website</th>
+        </tr>
+        <tr>
+          <td>Morogoro municipality</td>
+          <td>-</td>
+        </tr>
+        <tr>
+          <td>Msichana Initiative</td>
+          <td><a href="https://msichana.or.tz" target="_blank">msichana.or.tz</a></td>
+        </tr>
+        <tr>
+          <td>HUHESO</td>
+          <td><a href="http://huheso.or.tz" target="_blank">huheso.or.tz</a></td>
+        </tr>
+        <tr>
+          <td>Tanzania Child Rights Forum (TCRF)</td>
+          <td><a href="http://www.childrightsforum.org" target="_blank">www.childrightsforum.org</a></td>
+        </tr>
+        <tr>
+          <td>Young African Leaders Initiative (YALI)</td>
+          <td><a href="https://yali.state.gov" target="_blank">yali.state.gov</a></td>
+        </tr>
+        <tr>
+          <td>Equality Now</td>
+          <td><a href="https://www.equalitynow.org" target="_blank">www.equalitynow.org</a></td>
+        </tr>
+        <tr>
+          <td>Students Invested in Health Association (SIHA)</td>
+          <td><a href="http://siha.ca" target="_blank">siha.ca</a></td>
+        </tr>
+      </table>
+    </div>
+
+    <!-- <div style="padding-top:80px;">
       <div class="container" style="width:800px;">
         <div class="grid-4">
           <a href="https://msichana.or.tz/" target="_blank" class="partner">
@@ -91,13 +140,16 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="footer" style="background-color:#f4f7f4;">
       <div class="container footer-container grid-12">
         <div>
           <div class="footer-heading">Who we are</div>
-          <div><a href="founders-message.html">Founders message</a></div>
+          <div><a href="founders-message.html">Founder's message</a></div>
+          <div><a href="our-history.html">Our history</a></div>
+          <div><a href="problem-statement.html">Problem statement</a></div>
+          <div><a href="partners.html">Partners</a></div>
         </div>
         <div>
           <div class="footer-heading">What we do</div>
