--- a/founders-message.html
+++ b/founders-message.html
@@ -84,6 +84,7 @@
           <div><a href="founders-message.html">Founder's message</a></div>
           <div><a href="our-history.html">Our history</a></div>
           <div><a href="problem-statement.html">Problem statement</a></div>
+          <div><a href="partners.html">Partners</a></div>
         </div>
         <div>
           <div class="footer-heading">What we do</div>
