--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
       <div class="container">
         <div style="font-size:14px;">
           <i class="fas fa-phone" style="margin-right:2px;"></i>
-          <!-- <span style="margin-right:30px;"></span> -->
           <a style="margin-right:30px;" href="tel:+255 737 235137">+255 737 235137</a>
-          <div id="navbar-top-email">
+          <span id="navbar-top-email">
             <i class="fas fa-envelope" style="margin-right:2px;"></i>
             <a href="mailto:info@ysmf.org">info@ysmf.org</a>
-          </div>
+          </span>
         </div>
         <div>
           <a href="https://www.facebook.com/www.ysmf.org" target="_blank" style="margin-right:30px;"><i class="fab fa-facebook-f"></i></a>
@@ -50,7 +49,18 @@
 
         <div class="nav-desktop">
           <ul>
-            <li><a href="#">Who we are</a></li>
+            <li>
+              <a href="#" class="nav-item">
+                <span>Who we are</span>
+                <i class="fas fa-caret-down"></i>
+              </a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="founders-message.html">Founder's message</a>
+                <a class="dropdown-item" href="our-history.html">Our history</a>
+                <a class="dropdown-item" href="problem-statement.html">Problem statement</a>
+                <a class="dropdown-item" href="partners.html">Our partners</a>
+              </div>
+            </li>
             <li><a href="#">What we do</a></li>
             <li><a href="#">Programmes</a></li>
             <li><a href="#">Volunteering</a></li>
@@ -178,7 +188,7 @@
           <div><a href="founders-message.html">Founder's message</a></div>
           <div><a href="our-history.html">Our history</a></div>
           <div><a href="problem-statement.html">Problem statement</a></div>
-          <div><a href="partners.html">Partners</a></div>
+          <div><a href="partners.html">Our partners</a></div>
         </div>
         <div>
           <div class="footer-heading">What we do</div>
@@ -206,5 +216,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/a93f17701c.js" crossorigin="anonymous"></script>
     <script src="js/acceptTerms.js"></script>
+    <script src="js/desktop-navbar.js"></script>
 
 </body></html>
