--- a/problem-statement.html
+++ b/problem-statement.html
@@ -49,7 +49,18 @@
 
         <div class="nav-desktop">
           <ul>
-            <li><a href="#">Who we are</a></li>
+            <li>
+              <a href="#" class="nav-item">
+                <span>Who we are</span>
+                <i class="fas fa-caret-down"></i>
+              </a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="founders-message.html">Founder's message</a>
+                <a class="dropdown-item" href="our-history.html">Our history</a>
+                <a class="dropdown-item" href="problem-statement.html">Problem statement</a>
+                <a class="dropdown-item" href="partners.html">Our partners</a>
+              </div>
+            </li>
             <li><a href="#">What we do</a></li>
             <li><a href="#">Programmes</a></li>
             <li><a href="#">Volunteering</a></li>
